examples/negative/protocols/derive_then_impl.kai
# Negative fixture (#520 / protocols): `#derive(Show)` synthesizes
# `impl Show for Box`, and a hand-written `impl Show for Box`
# also appears. The dispatch resolver must reject the duplicate.

#derive(Show)
type Box = Box(Int)

impl Show for Box {
  fn show(b: Box) : String = "Box"
}

fn main() : String = show(Box(1))
